[gd_scene load_steps=3 format=3 uid="uid://df7wwmqur8nnw"]

[ext_resource type="Script" path="res://damagenumbers.gd" id="1_0rm2v"]
[ext_resource type="FontFile" uid="uid://bywq88n8s2f0d" path="res://Pixel.ttf" id="2_m22y4"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0rm2v")

[node name="numbers" type="RichTextLabel" parent="."]
texture_filter = 1
texture_repeat = 1
layout_mode = 0
offset_top = -66.0
offset_right = 60.0
offset_bottom = -26.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_m22y4")
text = "error"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="delete" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="stopmovement" type="Timer" parent="."]
wait_time = 0.7
one_shot = true
autostart = true

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="timeout" from="delete" to="." method="_on_delete_timeout"]
[connection signal="timeout" from="stopmovement" to="." method="_on_stopmovement_timeout"]
